# aggregator-nicknames

./: LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  run_menu.py
.github/workflows/: ci.yml
aggregator/: __init__.py  __main__.py  cache_manager.py  cli.py  config.py  dedupe.py  deduplication.py  download.py  export.py  logger.py  normalize.py  orchestrate.py  orchestrator.py  orchestrator.py.bak  split_raw.py  utils.py
aggregator/orchestration/: __init__.py  base.py  cleaning.py  combined.py  error_handling.py  interactive.py  interactive_runner.py  splitting.py  translations.py  utils.py
aggregator/scripts/: clean_raw_data.py
tests/: conftest.py  test_cache_manager.py  test_config.py  test_dedupe.py  test_download_interactive.py  test_export.py  test_normalize.py  test_utils.py
