[tool.poetry]
name = "aggregator-nickname"
version = "0.1.0"
description = "Agrégateur de pseudos, prénoms et noms à partir de multiples sources"
authors = ["Manus"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
polars = "^1.29.0"
pydantic = "^2.11.4"
aiohttp = "^3.9.3"
unidecode = "^1.4.0"
rich = "^13.7.0"
tqdm = "^4.67.1"
typer = "^0.15.4"
gitpython = "^3.1.43"
pyyaml = "^6.0.1"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.10"
pyright = "^1.1.400"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "A"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

